--- a/upload.html
+++ b/upload.html
@@ -19,7 +19,7 @@
             const file = fileInput.files[0];
             if (file) {
                 const formData = new FormData();
-                formData.append('file', file);
+                formData.append('upload_files', file);
 
                 fetch('http://127.0.0.1:5000/upload', {
                     method: 'POST',
